<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="10dp"><EditText android:hint="@string/email_string" android:id="@+id/email" android:layout_height="wrap_content" android:layout_width="match_parent"/><EditText android:hint="@string/password_string" android:id="@+id/password" android:layout_below="@+id/email" android:layout_height="wrap_content" android:layout_width="match_parent"/><LinearLayout android:id="@+id/row2" android:layout_below="@+id/password" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal"><Button android:id="@+id/signInBtn" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_weight="0.5" android:layout_width="wrap_content" android:text="@string/signInBtn_string" style="@style/Widget.Button"/><Button android:id="@+id/forgot" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_weight="0.5" android:layout_width="wrap_content" android:text="@string/forgot_string" style="@style/Widget.Button"/></LinearLayout></RelativeLayout>